2023-02-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/tests/latin2_works.sh: Fix missing backslash in printf.
	Solaris printf(1) was sensitive to this error; macOS and GNU
	printf were not.  Fixes a test failure on Solaris 11.

2023-02-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/regression_savannah_58153.sh: Improve
	portability.  Avoid the unpredictability of implementations when
	putting backslashes inside a groff-piped printf shell command
	inside a here document inside a command substitution by changing
	the groff escape character to something meaningless to the shell
	and to printf ('@').  Fixes a test failure on Solaris 11.

2023-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/Foundry.in: Recognize URW foundry replacements for
	Helvetica Bold-Oblique and Helvetica Oblique under the file
	names "NimbusSans-BoldItalic.t1" and "NimbusSans-Italic.t1",
	respectively.

2023-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (uninstall-pdf): Clean more fastidiously; try to
	remove the configured `pdfdocdir` in the event it is empty, but
	do not fail if it isn't.  (It can be a directory shared with
	other groff components; we don't know in what order the
	uninstall targets will serialize, but the last one run should
	succeed.)

2023-02-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Detangle "pdfroff" and "gropdf" configuration (2/2).

	* m4/groff.m4: Give pdfroff its own Autoconf macros to handle
	dependency checking, build objectives, and user notice.
	(GROFF_PDFROFF_DEPENDENCIES_CHECK): New macro requires
	`GROFF_AWK_PATH` and `GROFF_GHOSTSCRIPT_PATH`, determines
	whether pdfroff can be used at build time, and (if not)
	constructs part of message to be shown to user explaining why.
	(GROFF_PDFROFF_PROGRAM_NOTICE): New macro requires
	`GROFF_PDFROFF_DEPENDENCIES_CHECK` and emits message if needed.